[Feat] 채팅 기능 카운터 구현, 읽음 표시 구현